test/parser/should_succeed/subcall.souc
import mymodule

main() = do
	print 42
end main
