test/parser/should_fail/unless3.souc
main() = do
	unless true do
	unless false 
		explode
	end unless
end main
